<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_login"
            android:scaleType="centerCrop"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="15dp"
            android:clipToPadding="true"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="30dp"
                android:paddingVertical="40dp"
                android:id="@+id/nameRow"
                android:orientation="vertical">
                <TextView
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/app_name_underline"
                    android:textFontWeight="1000"
                    android:letterSpacing="0.1"
                    android:textSize="40dp"
                    android:textColor="@color/color_1"
                    />
                <TextView
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:textFontWeight="400"
                    android:text="Bersama kami,\ndaftarkan momen indahmu"
                    android:textSize="20dp"
                    />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"/>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate" />

                <Button
                    android:id="@+id/datePickerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="01-JAN-2020"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    style="?android:spinnerStyle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginTop="10dp"
                    android:onClick="openDatePicker"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="DAFTAR"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_round_login"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Sudah punya akun?" />

                <TextView
                    android:id="@+id/link_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:text="@string/login_here"
                    android:textColor="@color/color_1"
                    android:textFontWeight="1000"
                    android:textSize="14dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>